Wed Oct 24 08:55:04 2012  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (ObjectSpace.reachable_objects_from):
	  internal object support.
	  If given object `obj' has references to internal objects
	  (such as T_NODE objects), then this method returns instances of
	  `ObjectSpace::InternalObjectWrapper' instead of that internal objects.
	  This instance contains a refereance to an internal object and you can
	  check the type of internal object using
	  `ObjectSpace::InternalObjectWrapper#type' method.
	  Rdoc of `InternalObjectWrapper' is not prepared yet.

	* gc.c (rb_objspace_reachable_objects_from), gc.h: change
	  an interface of 'rb_objspace_reachable_objects_from()'

	* gc.c, gc.h: add two APIs
	  - rb_objspace_markable_object_p(obj): check markable or not.
	  - rb_objspace_internal_object_p(obj): check internal or not.

Wed Oct 24 05:52:36 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method): remove `default' and
	  add a case for `VM_METHOD_TYPE_UNDEF'.

Wed Oct 24 05:41:18 2012  Koichi Sasada  <ko1@atdot.net>

	* eval_error.c (error_print), vm_eval.c (eval_string_with_cref),
	  vm_trace.c (rb_suppress_tracing): use TH_PUSH_TAG() instead of
	  PUSH_TAG().

Wed Oct 24 05:17:52 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (vm_call0_body): remove RUBY_VM_CHECK_INTS()
	  after method invocation using rb_call0().

	* vm_eval.c (vm_call0_body): remove default section on top of
	  switch statement and add cases for `VM_METHOD_TYPE_CFUNC_FRAMELESS'
	  and `VM_METHOD_TYPE_UNDEF'.

	* vm_eval.c (vm_call0_body): remove useless brackets.

Tue Oct 23 22:34:49 2012  Koichi Sasada  <ko1@atdot.net>

	* thread.c (thread_raise_m):  check interrupts after Thread#raise
	  if a target thread is the current thread because the behavior
	  of Thread.current.raise is expected to perform same as
	  Kernel.raise (by rubyspec).

Tue Oct 23 17:08:39 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
